[gd_scene load_steps=4 format=3 uid="uid://dl23nw35yydom"]

[ext_resource type="Script" uid="uid://d3bboshljd73u" path="res://world/pausa.gd" id="1_xxeck"]
[ext_resource type="AudioStream" uid="uid://dymmpo6qhni4q" path="res://audio/sfx_selection.mp3" id="2_p6qt5"]

[sub_resource type="LabelSettings" id="LabelSettings_apn6c"]
font_size = 80

[node name="Pausa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxeck")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.262932, 0.262932, 0.262932, 0.682353)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 104.0
offset_right = 840.0
offset_bottom = 600.0
color = Color(0.0862745, 0.0862745, 0.0862745, 0.317647)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 112.0
offset_right = 770.0
offset_bottom = 224.0
text = "PAUSA"
label_settings = SubResource("LabelSettings_apn6c")

[node name="Boton_Continuar" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 512.0
offset_top = 256.0
offset_right = 768.0
offset_bottom = 320.0
text = "Continuar"

[node name="Boton_Reinicio" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 512.0
offset_top = 384.0
offset_right = 768.0
offset_bottom = 448.0
text = "Reiniciar"

[node name="Boton_Menu" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 512.0
offset_top = 512.0
offset_right = 768.0
offset_bottom = 576.0
text = "Menu"

[node name="sfx_selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_p6qt5")
volume_db = -10.0

[connection signal="mouse_entered" from="Boton_Continuar" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Boton_Continuar" to="." method="_on_boton_continuar_pressed"]
[connection signal="mouse_entered" from="Boton_Reinicio" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Boton_Reinicio" to="." method="_on_boton_reinicio_pressed"]
[connection signal="mouse_entered" from="Boton_Menu" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Boton_Menu" to="." method="_on_boton_menu_pressed"]
